<resources>
    <string name="app_name">MobileHomework</string>
    <string name="app_splash_logo">ModulStart</string>
    <string name="login">E-mail</string>
    <string name="name_hint">Name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirmation</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="accounts">Accounts</string>
    <string name="op_history">History</string>
    <string name="chat">Support chat</string>
    <string name="details">Account details</string>
    <string name="profile">Profile</string>
    <string name="login_state">logged_in</string>
    <string name="access_token">access_token</string>
    <string name="no_accounts">No accounts</string>
    <string name="no_templates">No templates</string>
    <string name="no_transactions">No transactions</string>
    <string name="account_number">Account number</string>
    <string name="email">E-mail</string>
    <string name="status">Status</string>
    <string name="balance">Balance</string>
    <string name="deposit">Deposit</string>
    <string name="payment">Payment</string>
    <string name="transfer">Transfer</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="acc_create">Create new account</string>
    <string name="enter_deposit_amount">Enter deposit amount</string>
    <string name="transfer_amount">Transfer amount</string>
    <string name="transfer_name">Transfer name</string>
    <string name="destination_account">Destination account</string>
    <string name="enter_account_id_manually">Enter account number manually</string>
    <string name="destination_account_number">Destination account number</string>
    <string name="deposit_suc">Deposit was successful</string>
    <string name="transaction_suc">Transaction was successful. Do you want to save the template?</string>
    <string name="username_empty_error">E-mail can\'t be empty</string>
    <string name="username_invalid_error">Invalid e-mail</string>
    <string name="name_empty_error">Name can\'t be empty</string>
    <string name="name_short_error">Name is too short</string>
    <string name="amount_error">Amount can\'t be empty</string>
    <string name="des_error">Destination account number can\'t be empty</string>
    <string name="deposit_error">Deposit value can\'t be empty</string>
    <string name="acc_no_name_error">Account name can\'t be empty</string>
    <string name="transaction_to">To %1$d</string>
    <string name="transaction_from">From %1$d</string>
    <string name="transaction_from_deposit">From deposit</string>
    <string name="transaction_plus">+ %1$s</string>
    <string name="transaction_minus">- %1$s</string>
    <string name="transaction_swap">%1$s</string>
    <string name="new_account">New account</string>
    <string name="acc_name">Account name</string>
    <string name="logout_warning">Are you sure want to logout?</string>
    <string name="password_warning">Password and password confirmation are not the same</string>
    <string name="close_acc_warning">Are you sure want to close this account?</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="calendar">Dates filter</string>
    <string name="edit_profile_info">Edit profile info</string>
    <string name="save">Save</string>
    <string name="templates">Templates</string>
    <string name="template_no_name">No name</string>

</resources>
