<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/accounts_fragment"
        android:icon="@drawable/ic_account_balance_white_18dp"
        android:title="@string/accounts"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/transactionsFragment"
        android:icon="@drawable/ic_history_white_18dp"
        android:title="@string/op_history"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_chat_white_18dp"
        android:title="@string/chat"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account_box_white_18dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom|withText"
        />

</menu>