<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transfer_amount"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transfer_name"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_account"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            />

        <Spinner
            android:id="@+id/destDropDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            />


        <CheckBox
            android:id="@+id/manualDestCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_account_id_manually"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/manualDestLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination_account_number"
            app:boxBackgroundColor="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/manualDest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="number"
                android:maxLength="10"

                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


</FrameLayout>