<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include layout="@layout/progress_layer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/acc"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/accName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                tools:text="Account name"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/account_number"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:id="@+id/accNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                tools:text="1234567890"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/balance"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:id="@+id/accBal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                tools:text="24124.5"
                android:fontFamily="@font/montserrat"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/depositButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button"
                android:elevation="0dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/deposit"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textFontWeight="600"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/transactionIcon"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button"
                android:elevation="0dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/transfer"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textFontWeight="600"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/paymentButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button"
                android:elevation="0dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/payment"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textFontWeight="600"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/closeButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button_danger"
                android:elevation="0dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textFontWeight="600"
                android:textSize="14sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>