<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include layout="@layout/progress_layer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePic"
                    android:layout_width="132dp"
                    android:layout_height="132dp"
                    android:src="@drawable/ic_account_circle_black_48dp"
                    android:layout_marginTop="25dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    />

                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    tools:text="Profile name"
                    android:fontFamily="@font/montserrat"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/hintColor"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:id="@+id/profileUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                tools:text="123@gmail.com"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/status"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:id="@+id/profileStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                tools:text="moderation"
                android:fontFamily="@font/montserrat"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/hintColor"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/editButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_button"
                android:elevation="0dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textFontWeight="600"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button_danger"
                android:elevation="0dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textFontWeight="600"
                android:textSize="14sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>